--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@
         transform-origin: 0% 0%;
         transition: .5s;
         opacity: 0;
+        background-color: #3333337a;
     }
 
     .navbar .nav-item:hover .dropdown-menu {
