--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@
 .page-header {
     padding-top: 12rem;
     padding-bottom: 6rem;
-    background: linear-gradient(rgba(0, 29, 35, .8), rgba(0, 29, 35, .8)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgb(204 203 203 / 88%), rgb(241 241 241 / 94%)), url(../img/images/slider-page/slider-page.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -223,7 +223,7 @@
 .page-header-madinat {
     padding-top: 12rem;
     padding-bottom: 6rem;
-    background: linear-gradient(rgba(0, 29, 35, 0.253), rgba(0, 29, 35, 0.514)), url(../img/images/madinat-1.jpg) center center no-repeat;
+    background: linear-gradient(rgb(204 203 203 / 88%), rgb(241 241 241 / 94%)), url(../img/images/slider-page/slider-page.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -813,6 +813,47 @@
 }
 /*** Objective End ***/
 
+/*** Donate Start ***/
+.contact .office .office-item {
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 0 45px rgba(0, 0, 0, 0.2);
+    background: var(--bs-light);
+    transition: 0.5s;
+}
+
+.contact .office .office-item:hover {
+    box-shadow: 20px 20px 20px rgba(0, 58, 102, 0.3);
+}
+
+.contact .office .office-item .office-img {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.contact .office .office-item .office-img img {
+    transition: 0.5s;
+}
+
+.contact .office .office-item:hover .office-img img {
+    transform: scale(1.3);
+}
+
+.contact .office .office-item .office-content a.text-secondary,
+.contact .office .office-item .office-content a.text-muted {
+    transition: 0.5s;
+}
+
+.contact .office .office-item .office-content a.text-muted:hover {
+    color: var(--bs-secondary) !important;
+}
+
+.contact .office .office-item .office-content a.text-secondary:hover {
+    color: var(--bs-primary) !important;
+}
+
+/*** Donate End ***/
 
 
 /*------------End Css SPE--------------------*/
