--- a/css/style.css
+++ b/css/style.css
@@ -924,5 +924,157 @@
 
 /*** Donate End ***/
 
+/*** service Start ***/
+.service .service-item {
+    position: relative;
+    overflow: hidden;
+}
+
+.service .service-item .service-inner .service-title {
+    position: relative;
+    margin-top: -30px;
+    text-align: center;
+    transition: 0.5s;
+}
+
+.service .service-item .service-inner .service-title .service-content {
+    position: absolute;
+    bottom: -100%;
+    left: 0;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: center;
+    border-radius: 10px;
+    background: var(--bs-primary);
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.service .service-item:hover .service-inner .service-title .service-content {
+    bottom: 0;
+    opacity: 1;
+}
+
+.service .service-item .service-inner .service-title .service-content a h4 {
+    border-bottom: 1px solid rgba(256, 256, 256, .1);
+}
+
+.service .service-item .service-inner .service-title .service-title-name {
+    transition: 0.5s;
+}
+
+.service .service-item:hover .service-inner .service-title .service-title-name {
+    opacity: 0;
+}
+
+.service .service-item .service-inner .service-img {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.service .service-item .service-inner .service-img::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, .5);
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.service .service-item:hover .service-inner .service-img::after {
+    height: 100%;
+    opacity: 1;
+}
+
+.service .service-item .service-inner .service-img img {
+    transition: 0.5s;
+}
+
+.service .service-item:hover .service-inner .service-img img {
+    transform: scale(1.3);
+}
+
+/*** Service End ***/
+
+/*  Team Area Start */
+/*----------------------------------------*/
+.team-area {
+    background: #fff;
+}
+
+.single-member {
+    margin-bottom: 30px;
+    border: 1px solid #f4f4f4;
+    padding: 30px 20px;
+}
+
+.single-member .team-img {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    /* max-height: 200px;
+    max-width: 200px;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%; */
+    border: 2px solid #E6922E;
+}
+
+.team-hover li {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.team-hover li a {
+    color: #fff;
+    border: 1px solid #E6922E;
+    background: #E6922E;
+    display: block;
+    width: 34px;
+    height: 34px;
+    line-height: 32px;
+    border-radius: 50%;
+}
+
+.team-hover li a:hover {
+    color: #fff;
+    border: 1px solid #1FC157;
+    background: #1FC157;
+}
+
+.team-hover {
+    padding: 15px 0 0px;
+    text-align: center;
+    transition: all 0.4s ease 0s;
+}
+
+.single-member .team-img a {
+    display: block;
+}
+
+.team-content {
+    padding: 10px 0px 0px;
+}
+
+.team-content h5 a {
+    color: #666;
+}
+
+.team-content p {
+    margin-bottom: 0;
+}
+
+.team-content h5 {
+    font-size: 18px;
+    margin: 10px 0px;
+    text-transform: capitalize;
+    font-weight: 600;
+}
+/*  Team Area End */
 
 /*------------End Css SPE--------------------*/
